# renameProxies

./: .gitignore  README.md  finalConfig.yaml  finalConfig1.yaml  metaST.sln  mmdbinspect_0.2.0_linux_amd64.deb  mmdbinspect_2.0.0_linux_amd64.deb.1  provider.yaml  pyproject.toml  renameProxies.py  renameProxies.yaml  renameProxies1.py  resource.yaml  template.yaml
.github/scripts/: cleanup_workflow_runs.py
.github/workflows/: cleanupWorkflows.yml  main.yml  release_on_tag.yml  renameProxies.yml  workflow_runs_cleaner.yml
clashverge/: DNS覆写.yaml  clash-verge-dev-script-backup.js  clash-verge-dev-script-backup.yaml  extension-script.js  扩展脚本1.js
docs/: extension-mode.md
metaST/: Program.cs  metaST.csproj  metaST.sln
metaST/Resources/template/: common.yaml  mixed.yaml  region.yaml  standard.yaml
metaST/Scripts/: 更新geo.bat  更新meta内核.bat
metaST/Src/Core/: Constants.cs  (+2 more)
metaST/dev/: config.yaml
rename_proxies/: __init__.py  config.py  geoip.py  groups_classic.py  groups_extension.py  naming.py  pipeline.py  resource_io.py  template_ops.py
resource/: resource1.yaml  resource2.yaml  resource3.yaml  resource4.yaml
result/: resource1_template.yaml  resource1_template2.yaml  resource2_template.yaml  resource2_template2.yaml  resource3_template.yaml  resource3_template2.yaml  resource4_template.yaml  resource4_template2.yaml
src/rename_proxies/: __init__.py  __main__.py  config.py  geoip.py  groups.py  location.py  mihomo.py  models.py  naming.py  pipeline.py  resource_io.py  template_ops.py
template/: template.yaml  template2.yaml
tests/: test_core.py
(+43 files in other folders)
