[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rename-proxies"
version = "1.0.0"
description = "基于 GeoIP 的 Clash 代理节点重命名与分组工具"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
]

[project.scripts]
rename-proxies = "rename_proxies.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
